--- a/2. ja 3. tund/test_page/index.html
+++ b/2. ja 3. tund/test_page/index.html
@@ -52,7 +52,7 @@
         }
     </style> -->
     
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
