--- a/9. tund/color-changer.html
+++ b/9. tund/color-changer.html
@@ -34,6 +34,13 @@
         }
         return color;
       }
+
+      const colorDiv = document.getElementById('colorDiv');
+      const changeColorBtn = document.getElementById('changeColorBtn')
+
+      changeColorBtn.addEventListener('click', function() {
+        colorDiv.style.backgroundColor = getRandomColor();
+      })
   </script>
 
 </body>
